init: added template from my previous project

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "delivery-app",
+  "name": "react-express-template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
