--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "delivery_app",
-  "version": "0.1.0",
+  "name": "react-express-template",
+  "version": "1.0.0",
   "private": true,
-  "homepage": "https://delivery-app-et-school1.vercel.app",
+  "homepage": "https://github.com/ArtemKrylov/react-express-template",
   "dependencies": {
-    "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,7 +13,6 @@
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
-    "formik": "^2.2.9",
     "modern-normalize": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,8 +22,7 @@
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.1.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
