review: changed package.json for vercel hosting

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-express-template",
+  "name": "techno-group-test-task-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
