feat: added getClients controller

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-POSTGRES_URL="postgres://default:r0OjsEFfmg5y@ep-sparkling-wave-877027-pooler.eu-central-1.postgres.vercel-storage.com:5432/verceldb"
+# POSTGRES_URL="postgres://default:r0OjsEFfmg5y@ep-sparkling-wave-877027-pooler.eu-central-1.postgres.vercel-storage.com:5432/verceldb"
 PORT=5000
