--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "techno-group-test-task-client",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://github.com/ArtemKrylov/TECHNO-group-test-task/client",
+  "homepage": "techno-group-test-task.vercel.app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
